[workspace]
members = [
    "crates/type-registry",
    "crates/type-registry-register-macro"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
generic_static = "0.2.0"
linkme = "0.3.16"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
