[package]
name = "type-registry-register-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Macro for statically registering types with type-registry"
repository = "https://github.com/csterling/type-registry"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"]}
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
type-registry = { path = "../type-registry" }
