[package]
name = "type-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Static type registration"
repository = "https://github.com/csterling/type-registry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["macro"]
macro = ["type-registry-register-macro"]

[dependencies]
generic_static = { workspace = true }
linkme = { workspace = true }
type-registry-register-macro = { version = "0.1.0", path = "../type-registry-register-macro", optional = true }
